--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -23,7 +23,7 @@
       justify-content: space-between
     &_network
       display: flex
-      align-content: center
+      align-items: start
       grid-row: 2 / 4
       grid-column: span 2
   &__contact
